Make class for abstract hid device

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(hid_example)
 
 set (CMAKE_CXX_STANDARD 17)
 
-add_executable(hid_example hid_example.cpp)
+add_executable(hid_example hid_example.cpp HidDevice.cpp)
 target_link_libraries(hid_example pthread hidapi-hidraw)
